# GoToLearn-AI_Agent

./: pyproject.toml  travel_agent_ver1.0.ipynb  travel_agent_ver2.0.ipynb
output/: cost.md  handbook.html  handbook.md  plan.md
source/: 1_agent.ipynb  2_routing.ipynb  3_manus_clone.ipynb  4_travel_agent.ipynb  4_travel_agent_log.ipynb  travel_agent_ver2.0.ipynb
