[project]
name = "travel-agent"
version = "0.1.0"
description = ""
authors = [
    {name = "Judy",email = "mjchoi0831@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "python-dotenv (>=1.1.0,<2.0.0)",
    "notebook (>=7.4.3,<8.0.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "langchain-community (>=0.3.25,<0.4.0)",
    "wikipedia (>=1.4.0,<2.0.0)",
    "pyowm (>=3.3.0,<4.0.0)",
    "langchain-openai (>=0.3.23,<0.4.0)",
    "langgraph (>=0.4.8,<0.5.0)",
    "youtube-search (>=2.1.2,<3.0.0)",
    "markdown2 (>=2.5.3,<3.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
